# pyIssuesTracker

./: .gitignore  MANUAL.md  README.md  launcher.bat  launcher.sh  main.py  pyissuestracker.desktop  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml  release.yml
app/: __init__.py  main_window.py  tray_icon.py
app/dialogs/: assign_dialog.py  complete_dialog.py  reject_dialog.py  settings_dialog.py  task_dialog.py  update_dialog.py
app/services/: download_worker.py  redmine_client.py  settings_manager.py  update_manager.py
app/utils/: constants.py  dates.py
app/widgets/: checklist_widget.py  comments_widget.py  filter_bar.py  multi_select_combo.py  status_indicator.py  task_table.py  toolbar.py
scripts/: release-notes.sh
tests/: conftest.py  test_assign_dialog.py  test_comments_widget.py  test_complete_dialog.py  test_main_window.py  test_mejoras_filtros.py  test_redmine_client.py  test_settings_manager.py  test_task_dialog_members.py  test_task_table_tracker.py  test_update_dialog.py  test_update_manager.py  test_ux_redmine.py
